PHP 4                                                                      NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? ??? 2004, Version 4.3.8
- Fixed bug #28868 (Internal wrapper registry not thread safe). (Sara)
- Fixed bug #28818 (Apache 2 sapis do not export st_dev).
  (xuefer at 21cn dot com, Ilia).
- Fixed bug #28723 (Fixed mbstring config.m4 to work on OSes where test
  command does not support -e parameter). (Ilia)
- Fixed bug #28692 (\0 in Authenticate header passed via safe_mode). (Ilia)
- Fixed bug #28670 (WWW-Authentication header mangling with PCRE in safe_mode
  adds extra spaces). (Ilia)
- Fixed bug #28668 (glob() does not work with relative paths on Windows).
  (Ilia)
- Fixed bug #28649 (Proper glob() return value on Linux when there are no
  matches). (Ilia)
- Fixed bug #28632 (Prevent open_basedir bypass via MySQL's LOAD DATA LOCAL).
  (Ilia)
- Fixed bug #28627 (When multiple MySQL links are used default link is leaked).
  (gavin at ipalsoftware dot com, Ilia)
- Fixed bug #28525 (gmp_powm() does not work with hexadecimal string modulo
  represented as a string). (pickett at sumu dot org, Ilia)
- Fixed bug #28175 (Allow bundled GD to compile against freetype 2.1.2).
  (Elf, Ilia)
- Fixed bug #28878 (Setting of inikey's in obj.conf fails). (Uwe Schindler)

03 Jun 2004, Version 4.3.7
- Upgraded bundled GD library to 2.0.23. (Ilia)
- Changed user error handler mechanism to relay to built-in error handler if it
  returns false. (Andrei)
- Fixed command line escaping routines for win32. (Ilia)
- Fixed problems with *printf() functions and '%f' formatting. (Marcus)
- Fixed possible crash inside pg_copy_(to|from) function if delimiter is more
  then 1 character long. (Ilia)
- Fixed crash inside cpdf_place_inline_image() when working with truecolor
  images. (Ilia)
- Fixed handling of return values from storred procedures in mssql_execute()
  with multiple result sets returned. (Frank)