@@ -1,6 +1,7 @@
 PHP 4                                                                      NEWS
 |||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
 ?? ??? 2004, Version 4.3.8
+- Updated PCRE to provide better error handling in certain cases. (Andrei)
 - Fixed bug #28868 (Internal wrapper registry not thread safe). (Sara)
 - Fixed bug #28818 (Apache 2 sapis do not export st_dev).
   (xuefer at 21cn dot com, Ilia).
